--- a/templates/track.html
+++ b/templates/track.html
@@ -9,9 +9,20 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
     <body>
-        <h1>{{ track.name }}</h1>
-        <h2 class="text-muted">{{ track.artists[0].name }}</h2>
-        <div class="radarChart"></div>
+        <div class="row p-4 rounded bg-light">
+            {% if track.album.images|length > 0 %}
+            <img class="col-md-2" src="{{ track.album.images[0].url }}" alt="{{ track.name }}">
+            {% endif %}
+            <div class="col-md-10">
+                <h1>{{ track.name }}</h1>
+                <h2 class="text-muted">{{ track.artists[0].name }}</h2>
+            </div>
+        </div>
+        
+        <div class="align-center text-center m-4">
+            <h3>Audio Features</h3>
+            <div class="radarChart"></div>
+        </div>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
