--- a/templates/playlist.html
+++ b/templates/playlist.html
@@ -12,7 +12,7 @@
         <div class="row p-4 rounded bg-light">
             {% if playlist %}
             {% if playlist.images|length > 0 %}
-            <img class="col-md-2" src="{{ playlist.images[0].url }}" alt="{{ playlist.name }}">
+            <img class="col-md-2" src="{{ playlist.images[0].url }}" style="object-fit: contain; width: 16rem; height: 16rem;" alt="{{ playlist.name }}">
             {% endif %}
             <div class="col-md-10">
                 <h1>{{ playlist.name }}</h1>
@@ -33,7 +33,7 @@
             <a href="{{ home_url }}/track/{{ song.id }}">
                 <div class="card col-lg-12 d-flex align-items-stretch p-4">
                     <div class="row no-gutters">
-                        <img src="{{ song.image }}" class="card-img col-sm-2" style="max-width: 10rem;" alt="{{ song.title }}">
+                        <img src="{{ song.image }}" class="card-img col-sm-2" style="object-fit: contain; width: 10rem; height: 10rem;" alt="{{ song.title }}">
                         <div>
                             <div class="card-body">
                                 <h2 class="card-title">{{ song.title }}</h2>
